[gd_scene load_steps=5 format=3 uid="uid://c3j8h4m2n9pvq"]

[ext_resource type="Script" path="res://scripts/minigames/SwipeGame.gd" id="1_swipegame"]
[ext_resource type="Script" path="res://scripts/minigames/SwipeInputManager.gd" id="2_swipeinput"]
[ext_resource type="PackedScene" uid="uid://bsqyxk3mht8vl" path="res://scenes/objects/Ball.tscn" id="3_ball"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1200, 100)

[node name="SwipeGame" type="Node2D"]
script = ExtResource("1_swipegame")
ball_scene = ExtResource("3_ball")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 1200)
zoom = Vector2(1, 1)

[node name="Background" type="ColorRect" parent="."]
offset_left = -100.0
offset_top = -200.0
offset_right = 1200.0
offset_bottom = 2600.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(540, -100)

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(540, 2500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
shape = SubResource("RectangleShape2D_1")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SwipeInputManager" type="Node2D" parent="."]
script = ExtResource("2_swipeinput")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 60
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 50.0
offset_top = 150.0
offset_right = 400.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 40
text = "Best: 0"

[node name="ComboLabel" type="Label" parent="CanvasLayer"]
offset_left = 340.0
offset_top = 800.0
offset_right = 740.0
offset_bottom = 900.0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Combo x0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesLabel" type="Label" parent="CanvasLayer"]
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 60
text = "❤️ 3"
horizontal_alignment = 2
